[package]
name = "max11300"
description = "A rust-embedded driver for the MAX11300 ADC/DAC"
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/max11300"
authors = ["Chris Maniewski"]
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://git.sr.ht/~chmanie/max11300"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-mock = { version = "0.10.0", features = ["eh1"] }
heapless = "0.8.0"
seq-macro = "0.3.0"

[dev-dependencies]
embedded-hal-mock = "0.10.0"
