[package]
name = "max11300"
description = "A rust-embedded driver for the MAX11300 ADC/DAC"
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/max11300"
authors = ["Chris Maniewski"]
version = "0.5.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://git.sr.ht/~chmanie/max11300"

[features]
default = ["cs"]
cs = ["critical-section"]

[dependencies]
critical-section = { version = "1.2.0", optional = true }
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
heapless = "0.8.0"
seq-macro = "0.3.6"
embassy-sync = "0.7.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = [
  "eh1",
  "embedded-hal-async",
] }
tokio = { version = "1.46.1", features = ["full"] }
critical-section = { version = "1.2.0", features = ["std"] }
static_cell = "2.1.1"
